# static_shared_libs

01/: CMakeLists.txt  library.cpp  library.h  main.cpp
02/: CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
